Removed prefix of swift classes. Added serialization test for swift. Resolved issue with NSNumber

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ifacegen.example/ifacegen.example.xcworkspace
 ifacegen.example/Pods
 ifacegen.test/ifacegen.test.test/test.h
 ifacegen.test/ifacegen.test.test/test.m
+ifacegen.test/ifacegen.test.test/test.swift
